# Copyright 2024 Vivaldi Technologies. All rights reserved.

import("//build/config/ios/rules.gni")

bundle_data_xcassets("assets") {
  catalog = "Assets.xcassets"
  sources = [
    # logo_se_duckduckgo
    "Assets.xcassets/logo_se_duckduckgo.imageset/Contents.json",
    "Assets.xcassets/logo_se_duckduckgo.imageset/logo_se_duckduckgo.svg",

    # logo_se_startpage
    "Assets.xcassets/logo_se_startpage.imageset/Contents.json",
    "Assets.xcassets/logo_se_startpage.imageset/logo_se_startpage.svg",

    # logo_se_yahoo
    "Assets.xcassets/logo_se_yahoo.imageset/Contents.json",
    "Assets.xcassets/logo_se_yahoo.imageset/logo_se_yahoo.svg",

    # logo_se_ecosia
    "Assets.xcassets/logo_se_ecosia.imageset/Contents.json",
    "Assets.xcassets/logo_se_ecosia.imageset/logo_se_ecosia.svg",

    # logo_se_quant
    "Assets.xcassets/logo_se_quant.imageset/Contents.json",
    "Assets.xcassets/logo_se_quant.imageset/logo_se_quant.svg",

    # donation_prompt_banner
    "Assets.xcassets/donation_prompt_banner.imageset/Contents.json",
    "Assets.xcassets/donation_prompt_banner.imageset/donation_prompt_banner@1x.png",
    "Assets.xcassets/donation_prompt_banner.imageset/donation_prompt_banner@2x.png",
    "Assets.xcassets/donation_prompt_banner.imageset/donation_prompt_banner@3x.png",
  ]
}
